Bug 42512 - mem leak
Summary: mem leak
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: libcolord (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-02 06:24 UTC by Christian Persch (GNOME)
Modified: 2011-11-02 07:25 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Christian Persch (GNOME) 2011-11-02 06:24:34 UTC
Found while valgrinding gnome-settings-daemon; version is colord-0.1.13-2.fc16.i686 .

==24418== 2 bytes in 2 blocks are definitely lost in loss record 41 of 10,009
==24418==    at 0x402AD89: malloc (vg_replace_malloc.c:236)
==24418==    by 0x4A62C3B: standard_malloc (gmem.c:88)
==24418==    by 0x4A631B0: g_malloc (gmem.c:164)
==24418==    by 0x4A7B3DB: g_strdup (gstrfuncs.c:100)
==24418==    by 0x4A952CB: g_variant_dup_string (gvariant.c:1355)
==24418==    by 0x7DF6EB2: cd_device_connect_cb (cd-device.c:706)
==24418==    by 0x48D139E: g_simple_async_result_complete (gsimpleasyncresult.c:749)
==24418==    by 0x48D14CB: complete_in_idle_cb (gsimpleasyncresult.c:761)
==24418==    by 0x4A58450: g_idle_dispatch (gmain.c:4785)
==24418==    by 0x4A5C5BE: g_main_context_dispatch (gmain.c:2425)
==24418==    by 0x4A5CCFF: g_main_context_iterate (gmain.c:3073)
==24418==    by 0x4A5D336: g_main_loop_run (gmain.c:3281)
==24418==    by 0x41B2064: gtk_main (gtkmain.c:1362)
Comment 1 Richard Hughes 2011-11-02 07:25:11 UTC
Cheers dude:

commit 482d1459e86550188cc3820793fbd6897be64708
Author: Richard Hughes <richard@hughsie.com>
Date:   Wed Nov 2 14:24:23 2011 +0000

    Fix a tiny memory leak when getting properties from a device
    
    Resolves https://bugs.freedesktop.org/show_bug.cgi?id=42512

Richard.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.