Fix a tiny memory leak when getting properties from a device

Resolves https://bugs.freedesktop.org/show_bug.cgi?id=42512